--- a/ToDo_Replica/res/layout/add_contact.xml
+++ b/ToDo_Replica/res/layout/add_contact.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content">	
@@ -7,7 +7,9 @@
 		android:id="@+id/android:list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:scrollbars="vertical">
+		android:layout_below="@+id/b_member_next"
+		android:scrollbars="vertical"
+		android:layout_alignParentTop="true">
 	</ListView>
 	<Button
 		android:id="@+id/b_member_next"
@@ -16,6 +18,8 @@
 		android:text="Finish"
 		android:textSize="20px"
 		android:layout_marginLeft="150px"
-		android:layout_marginRight="150px">
+		android:layout_marginRight="150px"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true">
 	</Button>
-</FrameLayout>
+</RelativeLayout>
